fix scrollbar

--- a/html/sass/components/_jquery.jscrollpane.scss
+++ b/html/sass/components/_jquery.jscrollpane.scss
@@ -21,7 +21,7 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 10px;
+	width: 14px;
 	height: 100%;
 }
 
@@ -60,7 +60,7 @@
 	cursor: pointer;
     width: 70%;
     margin: auto;
-    margin-top: 1px;
+    margin-top: 2px;
 }
 
 .jspHorizontalBar .jspTrack,
